git-svn-id: http://www.ontocat.org/svn/trunk@346 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -18,7 +18,7 @@
 		<patternset id="test.sources">
 			<include name="**/*Test.class" />
 			<exclude name="**/special/*" />
-			<exclude name="**/CachedServiceDecorator*" />
+			<exclude name="**/CachedDecoratorTest*" />
 		</patternset>
 	</fileset>
 
