--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -189,7 +189,7 @@
 			<formatter type="xml" usefile="true" />
 			<batchtest fork="yes" todir="${test.reports}">
 				<fileset dir="bin">
-					<include name="**/*CachedDecoratorTest*.class"/>
+					<include name="**/*HudsonTest*.class"/>
 				</fileset>
 			</batchtest>
 		</junit>
