--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -2,7 +2,7 @@
 <project default="dist" name="ontocat" basedir=".">
 	<!-- set global properties for this build -->
 	<property name="test.reports" value="reports" />
-	<property name="version" value="0.9.7" />
+	<property name="version" value="0.9.7.1" />
 	<property name="copyright" value="Copyright © 2010 European Bioinformatics 
 		Institute and University of Groningen. Released under LGPLv3." />
 
@@ -189,7 +189,7 @@
 			<formatter type="xml" usefile="true" />
 			<batchtest fork="yes" todir="${test.reports}">
 				<fileset dir="bin">
-					<include name="**/*CachedDecoratorTest*.class"/>
+					<include name="**/*HudsonTest*.class"/>
 				</fileset>
 			</batchtest>
 		</junit>
