git-svn-id: http://www.ontocat.org/svn/trunk@382 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -36,6 +36,9 @@
 	<target name="compile">
 		<javac srcdir="src:test" destdir="bin" nowarn="on">
 			<classpath refid="test.classpath" />
+			<include name="**/ehcache.xml"/>
+			<include name="**/ehcache.xsd"/>
+			<include name="**/log4j.properties"/>
 		</javac>
 	</target>
 
