--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -172,7 +172,7 @@
 		<delete dir="${test.reports}" />
 		<mkdir dir="${test.reports}" />
 		<echo>Running junit tests...</echo>
-		<junit fork="no" haltonfailure="yes" printSummary="true" showOutput="false">
+		<junit fork="yes" haltonfailure="yes" printSummary="true" showOutput="false">
 			<classpath refid="test.classpath" />
 			<formatter type="xml" usefile="true" />
 			<batchtest fork="yes" todir="${test.reports}">
