git-svn-id: http://www.ontocat.org/svn/trunk@385 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -36,8 +36,11 @@
 	<target name="compile">
 		<javac srcdir="src:test" destdir="bin" nowarn="on">
 			<classpath refid="test.classpath" />
-	
 		</javac>
+		<!-- deliver config files -->
+	       <copy todir="bin">
+	            <fileset dir="src" excludes="**/*.java"/>
+	        </copy>
 	</target>
 
 	<target name="clean-dist">
