--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -246,6 +246,7 @@
 	<property name="hudson.user" value="tadamusiak" />
 	<property name="hudson.pass" value="${env.SFPASS}" />
 	<target name="hudson-to-sf">
+		<echo message="${hudson.pass}"/>
 			<!-- request interactive shell -->
 				<sshexec host="shell.sourceforge.net"
 					 trust="true"
