--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -243,6 +243,7 @@
 		</target>
 	
 	
+	<property environment="env"/>
 	<property name="hudson.user" value="tadamusiak" />
 	<property name="hudson.pass" value="${env.SFPASS}" />
 	<target name="hudson-to-sf">
