--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -244,10 +244,9 @@
 	
 	
 	<property environment="env"/>
-	<property name="hudson.user" value="tadamusiak" />
+	<property name="hudson.user" value="${env.SFUSER}" />
 	<property name="hudson.pass" value="${env.SFPASS}" />
 	<target name="hudson-to-sf">
-		<echo message="the pass is ${hudson.pass} ${hudson.user} ${env.SFPASS}"/>
 			<!-- request interactive shell -->
 				<sshexec host="shell.sourceforge.net"
 					 trust="true"
