--- a/ontoCAT/.classpath
+++ b/ontoCAT/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="lib/jargs.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
@@ -99,21 +98,14 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="lib/owlapi-3.1.0/owlapi-bin.jar" sourcepath="lib/owlapi-3.1.0/owlapi-src.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="lib/owlapi-3.1.0/owlapi-src.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="lib/commons-validator-1.3.1/commons-validator-1.3.1.jar" sourcepath="C:/Documents and Settings/tomasz/.m2/repository/commons-validator/commons-validator/1.3.1/commons-validator-1.3.1-sources.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/HermiT/org.semanticweb.HermiT.jar"/>
+	<classpathentry kind="lib" path="lib/owlapi-3.2.2/owlapi-bin.jar" sourcepath="lib/owlapi-3.2.2/owlapi-src.jar"/>
+	<classpathentry kind="lib" path="lib/owlapi-3.2.2/owlapi-src.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
