excluding OntologyParserTest.java from compile task for hudson
git-svn-id: http://www.ontocat.org/svn/trunk@461 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -34,7 +34,7 @@
 	</target>
 
 	<target name="compile">
-		<javac srcdir="src:test" excludes="**/OntologyParser.java" destdir="bin" nowarn="on">
+		<javac srcdir="src:test" excludes="**/OntologyParserTest.java" destdir="bin" nowarn="on">
 			<classpath refid="test.classpath" />
 		</javac>
 		<!-- deliver config files -->
