removed some special broken test
git-svn-id: http://www.ontocat.org/svn/trunk@469 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT/.classpath
+++ b/ontoCAT/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
+	<classpathentry excluding="uk/ac/ebi/ontocat/special/OntologyParserTest.java" kind="src" path="test"/>
 	<classpathentry exported="true" kind="lib" path="lib/jargs.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
