git-svn-id: http://www.ontocat.org/svn/trunk@474 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -34,7 +34,7 @@
 	</target>
 
 	<target name="compile">
-		<javac includeantruntime="false" srcdir="src:test" excludes="**/OntologyParserTest.java" destdir="bin" nowarn="on">
+		<javac includeantruntime="yes" srcdir="src:test" excludes="**/OntologyParserTest.java" destdir="bin" nowarn="on">
 			<classpath refid="build.classpath" />
 		</javac>
 		<!-- deliver config files -->
