--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -9,6 +9,7 @@
 	<!-- set class path -->
 	<path id="build.classpath">
 		<pathelement location="bin" />
+		<pathelement location="${ant.core.lib}"/>
 		<fileset dir="lib">
 			<include name="**/*.jar" />
 		</fileset>
@@ -34,7 +35,7 @@
 	</target>
 
 	<target name="compile">
-		<javac includeantruntime="yes" srcdir="src:test" excludes="**/OntologyParserTest.java" destdir="bin" nowarn="on">
+		<javac includeantruntime="false" srcdir="src:test" excludes="**/OntologyParserTest.java" destdir="bin" nowarn="on">
 			<classpath refid="build.classpath" />
 		</javac>
 		<!-- deliver config files -->
