--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -9,7 +9,7 @@
 	<!-- set class path -->
 	<path id="build.classpath">
 		<pathelement location="bin" />
-		<pathelement location="${ant.core.lib}"/>
+		<pathelement location="${ant.home}"/>
 		<fileset dir="lib">
 			<include name="**/*.jar" />
 		</fileset>
@@ -35,7 +35,8 @@
 	</target>
 
 	<target name="compile">
-		<javac includeantruntime="false" srcdir="src:test" excludes="**/OntologyParserTest.java" destdir="bin" nowarn="on">
+		<echo message="${ant.home}"/>
+		<javac includeantruntime="no" srcdir="src:test" excludes="**/OntologyParserTest.java" destdir="bin" nowarn="on">
 			<classpath refid="build.classpath" />
 		</javac>
 		<!-- deliver config files -->
