--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -177,7 +177,7 @@
 		<delete dir="${test.reports}" />
 		<mkdir dir="${test.reports}" />
 		<echo>Running junit tests...</echo>
-		<junit fork="yes" haltonfailure="yes" printSummary="true" showOutput="false" timeout="600000">
+		<junit includeantruntime="yes" fork="yes" haltonfailure="yes" printSummary="true" showOutput="false" timeout="600000">
 			<classpath refid="build.classpath" />
 			<formatter type="xml" usefile="true" />
 			<batchtest fork="yes" todir="${test.reports}">
