--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -9,11 +9,7 @@
 	<!-- set class path -->
 	<path id="build.classpath">
 		<pathelement location="bin" />
-		<pathelement location="${ant.home}" />
 		<fileset dir="lib">
-			<include name="**/*.jar" />
-		</fileset>
-		<fileset dir="${ant.home}">
 			<include name="**/*.jar" />
 		</fileset>
 	</path>
@@ -38,7 +34,8 @@
 	</target>
 
 	<target name="compile">
-		<echo message="${ant.home}" />
+		<echo message="Ant home is ${ant.home}" />
+		<echo message="${ant.version}" />
 		<javac includeantruntime="no" srcdir="src:test" excludes="**/OntologyParserTest.java" destdir="bin" nowarn="on">
 			<classpath refid="build.classpath" />
 		</javac>
