added release version of log4j settings turning off debug statements
git-svn-id: http://www.ontocat.org/svn/trunk@487 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT/src/log4j.properties
+++ b/ontoCAT/src/log4j.properties
@@ -1,9 +1,8 @@
 log4j.rootLogger=OFF
 
-# need these to debug
-# TODO: find a way to selectively turn on/off via ant/maven
+# NOTE release version of this file is dist/log4j-release.properties
 log4j.logger.net.sf.ehcache=ERROR, CONSOLE
-log4j.logger.uk.ac.ebi.ontocat=INFO, CONSOLE
+log4j.logger.uk.ac.ebi.ontocat=DEBUG, CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
