added release version of log4j settings turning off debug statements
git-svn-id: http://www.ontocat.org/svn/trunk@488 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -34,15 +34,14 @@
 	</target>
 
 	<target name="compile">
-		<echo message="Ant home is ${ant.home}" />
-		<echo message="${ant.version}" />
-		<javac includeantruntime="no" srcdir="src:test" excludes="**/OntologyParserTest.java" destdir="bin" nowarn="on">
+		<javac includeantruntime="false" srcdir="src:test" excludes="**/OntologyParserTest.java" destdir="bin" nowarn="on">
 			<classpath refid="build.classpath" />
 		</javac>
 		<!-- deliver config files -->
 		<copy todir="bin">
-			<fileset dir="src" excludes="**/*.java" />
+			<fileset dir="src" includes="ehcache.*" />
 		</copy>
+		<copy file="dist/log4j-release.properties" tofile="bin/log4j.properties"/>
 	</target>
 
 	<target name="clean-dist">
