--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -83,7 +83,7 @@
 				<attribute name="Class-Path" value="." />
 			</manifest>
 			<fileset dir="bin" />
-			<fileset dir="src" />
+			<fileset dir="src" includes="**/*.java" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/jargs.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/log4j-1.2.15.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/junit-4.8.1.jar" />
@@ -117,7 +117,7 @@
 				<attribute name="Class-Path" value="." />
 			</manifest>
 			<fileset dir="bin" />
-			<fileset dir="src" />
+			<fileset dir="src" includes="**/*.java" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/jargs.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/log4j-1.2.15.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/junit-4.8.1.jar" />
